deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decaf-metabolica-production
spec:
  selector:
    matchLabels:
      app: decaf-metabolica
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: decaf-metabolica
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/decaf-metabolica:master
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0"
