deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: decaf-metabolica
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: https://caffeine.dd-decaf.eu
spec:
  tls:
  - hosts:
    - app.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: app.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: n-a
          servicePort: 80
